# hil-bench-controller

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  dashboard-ci.yml  deploy-dashboard.yml
bootstrap/: bootstrap_pi.sh  configure_hostname.sh  generate_local_config.sh  install_health_timer.sh  install_led_service.sh  install_publisher.sh  install_python_env.sh  install_runner.sh  install_system_packages.sh  install_udev_rules.sh  update.sh  write_runner_env.sh
configs/: bench-config.example.yaml  config.template.yaml  supabase.env.template
dashboard/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: app.tsx  main.tsx  types.ts
docs/: bench-setup.md  dashboard-setup.md  getting-started.md  github-integration.md  led-status-display.md  publisher-architecture.md  quickstart.md  wiring-guide.md
examples/: firmware-ci.yml
src/hilbench/: __init__.py  artifacts.py  config.py  exceptions.py  gpio.py  health.py  log.py  probe.py  relay.py  serial_io.py
supabase/migrations/: 001_create_tables.sql  002_rls_policies.sql  (+1 more)
systemd/: hil-bench-health.service  hil-bench-health.timer  hil-bench-led.service  hil-bench-publisher.service
tests/: conftest.py  test_artifacts.py  test_cli.py  test_config.py  test_gpio.py  test_health.py  test_led_cli.py  test_led_client.py  test_led_daemon.py  test_led_models.py  test_led_scenes.py  test_probe.py  test_publisher_client.py  test_publisher_config.py  test_publisher_heartbeat.py  test_publisher_hooks.py  test_relay.py  test_serial_io.py
udev/: 99-hil-bench.rules
(+27 files in other folders)
