[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hil-bench-controller"
version = "0.1.0"
description = "Hardware-in-the-Loop bench controller for automated MCU firmware testing"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "Aharoni Lab" }]

dependencies = [
    "click>=8.1",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "pyserial>=3.5",
    "gpiod>=2.2",
    "rich>=13.0",
]

[project.optional-dependencies]
publisher = ["supabase>=2.11"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML",
    "types-pyserial",
    "supabase>=2.11",
]

[project.scripts]
benchctl = "hilbench.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["gpiod.*", "serial.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["supabase.*", "gotrue.*", "postgrest.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "hardware: marks tests that require physical hardware (deselect with '-m \"not hardware\"')",
]
